<resources>
    <string name="app_name">XMPPDemo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">XMPP Demo</string>
    <string name="alert">Alert</string>
    <string name="cancel">Cancel</string>
    <string name="account1">Username: demo1 - Password: 123456</string>
    <string name="account2">Username: demo2 - Password: 123456</string>
    <string name="term">This application has developed by Officience Viet Nam
        using Smack-4.1.4 library for message app with XMPP Server (https://fysh.in)</string>
    <string name="version">This application support from Android 4.2 </string>
    <string name="contact">Contact me: vinhquang.tran@officience.com</string>
    <string name="noConnection">Please check your internet connection.</string>
    <string name="checkingConnection">Checking internet connection</string>
    <string name="alertConnection">Please connect to internet to using this application</string>
    <string name="tryAgain">Try again</string>
    <string name="use">To chat with another user, please choose
        button send message in right bottom of screen.
        Type name of another user to textbox and press start button at top right</string>
    <string name="howtouse">Tap button to chat with friend</string>
    <string name="no_contact">No contact available</string>
</resources>
